cmake_minimum_required(VERSION 3.2)

project(HIKROBOT_Camera_demos)

message(=============================================================)
message("-- Ready to compile demos")
message(=============================================================)

link_directories(
    ${BUILD_DIR}/src
)

add_executable(ChunkData ChunkData.cpp)
add_executable(ConnectSpecCamera Trigger_Image.cpp)
add_executable(Events Events.cpp)
add_executable(ForceIP ForceIP.cpp)
add_executable(Grab_ImageCallback Grab_ImageCallback.cpp)
add_executable(GrabImage GrabImage.cpp)
add_executable(GrabImage_HighPerformance GrabImage_HighPerformance.cpp)
add_executable(GrabMultipleCamera GrabMultipleCamera.cpp)
add_executable(ImageProcess ImageProcess.cpp)
add_executable(MultiCast MultiCast.cpp)
add_executable(ParametrizeCamera_FileAccess ParametrizeCamera_FileAccess.cpp)
add_executable(ParametrizeCamera_LoadAndSave ParametrizeCamera_LoadAndSave.cpp)
add_executable(ReconnectDemo ReconnectDemo.cpp)
add_executable(SetIO SetIO.cpp)
add_executable(SetParam SetParam.cpp)
add_executable(Trigger_Image Trigger_Image.cpp)
add_executable(Trigger_ImageCallback Trigger_ImageCallback.cpp)

target_link_libraries(ChunkData MvCameraControl)
target_link_libraries(ConnectSpecCamera MvCameraControl)
target_link_libraries(Events MvCameraControl)
target_link_libraries(ForceIP MvCameraControl)
target_link_libraries(Grab_ImageCallback MvCameraControl)
target_link_libraries(GrabImage MvCameraControl)
target_link_libraries(GrabImage_HighPerformance MvCameraControl)
target_link_libraries(GrabMultipleCamera MvCameraControl)
target_link_libraries(ImageProcess MvCameraControl)
target_link_libraries(MultiCast MvCameraControl)
target_link_libraries(ParametrizeCamera_FileAccess MvCameraControl)
target_link_libraries(ParametrizeCamera_LoadAndSave MvCameraControl)
target_link_libraries(ReconnectDemo MvCameraControl)
target_link_libraries(SetIO MvCameraControl)
target_link_libraries(SetParam MvCameraControl)
target_link_libraries(Trigger_Image MvCameraControl)
target_link_libraries(Trigger_ImageCallback MvCameraControl)